<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.uc3m.inf.lab.notificaclases.MainActivity" >

    <EditText android:id="@+id/editText_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_usuario" />
    
    <EditText android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_password"
        android:inputType="textPassword" />
    
    <EditText android:id="@+id/editText_passLDAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_passLDAP"
        android:inputType="textPassword" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/button_connect"
        android:onClick="conectar" />

</LinearLayout>
