<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="es.uc3m.inf.lab.notificaclases.Principal" >
    
    <LinearLayout 
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="left"
	    android:orientation="horizontal" >

	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left|center_vertical"
	        android:text="@string/button_iniciar_service" 
			android:onClick="initService" />
	    
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="left|center_vertical"
	        android:text="@string/button_parar_service" 
			android:onClick="stopService" />
	
	</LinearLayout>
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/textview_titulo"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/textview_contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_contenido" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/textview_nota"
        android:textSize="12sp"
        android:gravity="bottom" />
    
</LinearLayout>
